--- a/application/home/view/menu/index.html
+++ b/application/home/view/menu/index.html
@@ -1,14 +1,13 @@
-{extend name="index" /} 
-{block name="body"}
+{extend name="index" /} {block name="body"}
 <div class="container">
     <div class="row-fluid">
         <div class="col-md-1"></div>
         <div class="col-md-10">
-            <form action="" method="post">
+            <form action="" method="get">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="input-group custom-search-form">
-                            <input class="form-control" name="" placeholder="标题..." type="text" value="" />
+                            <input class="form-control" name="name" placeholder="标题..." type="text" value="{:input('get.name')}" />
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="submit">
                                     <i class="fa fa-search"></i>
@@ -19,7 +18,7 @@
                     <div class="col-md-2">
                     </div>
                     <div class="col-md-2 col-md-offset-5">
-                        <div class="col-md-2"><a href="{:url('Menu/add')}" class="btn btn-primary" style="margin-left: 40px;
+                        <div class="col-md-2"><a href="{:url('add')}" class="btn btn-primary" style="margin-left: 40px;
 "><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a></div>
                     </div>
                 </div>
@@ -41,48 +40,21 @@
                             </tr>
                         </thead>
                         <tbody>
+                            {volist name="Menus" id="Menu" key="key"}
                             <tr>
-                                <td>1</td>
-                                <td>首页</td>
-                                <td>1</td>
-                                <td>显示</td>
+                                <td>{$key}</td>
+                                <td>{$Menu->name}</td>
+                                <td>{$Menu->weight}</td>
+                                <td>{$Menu->status}</td>
                                 <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
+                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit?id='.$Menu->id)}"><i class="fa fa-pencil"></i> 编辑</a>
+                                    <a class="btn btn-md btn-danger" href="{:url('delete?id='.$Menu->id)}"><i class="fa fa-trash-o "></i> 删除</a>
                                 </td>
                             </tr>
-                             <tr>
-                                <td>2</td>
-                                <td>新闻通知</td>
-                                <td>2</td>
-                                <td>不显示</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>产品列表</td>
-                                <td>3</td>
-                                <td>显示</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>关于我们</td>
-                                <td>3</td>
-                                <td>不显示</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Menu/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
+                            {/volist}
                         </tbody>
                     </table>
+                    {$Menus->render()}
                 </div>
                 <nav>
                     <Yunzhi:page totalcount="totalCount" />
