--- a/application/home/view/menu/add.html
+++ b/application/home/view/menu/add.html
@@ -9,52 +9,48 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="名称">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="名称" name="name" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">模块名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="模块名">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="模块名" name="module" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">控制器名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="控制器名">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="控制器名" name="controller" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">方法名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="方法名">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="方法名" name="action" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">权重</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="权重">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="权重" name="weight" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">状态</label>
                     <div class="col-sm-10">
-                        <select class="form-control">
-                            <foreach name="" item="module">
-                                <option value="">显示</option>
-                                <option value="">不显示</option>
-                            </foreach>
+                        <select class="form-control" name="status">
+                            <option value="1">显示</option>
+                            <option value="0">不显示</option>
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">权限</label>
                     <div class="col-sm-10">
-                        <select class="form-control">
-                            <foreach name="" item="module">
-                                <option value="">所有用户</option>
-                                <option value="">注册用户</option>
-                            </foreach>
+                        <select class="form-control" name="is_permission">
+                                <option value="0">所有用户</option>
+                                <option value="1">注册用户</option>
                         </select>
                     </div>
                 </div>
