--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -10,15 +10,15 @@
                     <div class="wrap box-2 border-1">
                         <ul>
                             <li>
-                                <a href="{:url('detail')}" title="我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳绩" target="_blank">我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳…</a>
+                                <a href="{:url('detail')}" title="我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳绩" target="_parent">我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳…</a>
                                 <span>[2016-08-15]</span>
                             </li>
                             <li>
-                                <a href="{:url('detail')}" title="河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考察调研" target="_blank">河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考…</a>
+                                <a href="{:url('detail')}" title="河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考察调研" target="_parent">河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考…</a>
                                 <span>[2016-08-15]</span>
                             </li>
                             <li>
-                                <a href="{:url('detail')}" title="天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企业" target="_blank">天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企…</a>
+                                <a href="{:url('detail')}" title="天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企业" target="_parent">天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企…</a>
                                 <span>[2016-08-14]</span>
                             </li>
                         </ul>
