--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -32,19 +32,15 @@
                     <h2 class="indent-1">产品列表</h2>
                 </div>
                 <div class="container_12">
+                {volist name="Products" id="Product"}
                     <div class="grid_2">
-                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
-                        <p>产品介绍详情</p>
+                        <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
+                        <p>{$Product->title}</p>
                     </div>
-                    <div class="grid_2">
-                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
-                        <p>产品介绍详情</p>
+                    {/volist} 
+                    <div style="margin-bottom:100px">
+                    {$Products->render()}
                     </div>
-                    <div class="grid_2">
-                        <a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="..." width="100px"></a>
-                        <p>产品介绍详情</p>
-                    </div>
-                   
                 </div>
             </div>
         </div>
@@ -52,4 +48,5 @@
 </div>
 </div>
 </div>
+
 {/block}
