--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -2,38 +2,17 @@
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">Website Template</a></div>
 <!--=======content================================-->
 <div id="content">
-    <div class="ic">More Website Templates @ TemplateMonster.com - July 22, 2013!</div>
-    <div class="slider-relative">
-        <div class="slider-block">
-            <div class="slider">
-                <ul class="items">
-                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt=""></a>
-                        <div class="banner">Our Customers are Our Priority</div>
-                    </li>
-                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt=""></a>
-                        <div class="banner">Creative Problem-Solving</div>
-                    </li>
-                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt=""></a>
-                        <div class="bannesr">Imagination is Our Power</div>
-                    </li>
-                    <li><a href="{:url('detail')}"><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt=""></a>
-                        <div class="banner">The World of Opportunities</div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+
     <div class="bg-2">
         <div class="container_12">
-
             <div class="grid_12">
-                <h2 class="indent-1">新闻</h2>
+                <h2 class="indent-1" style="margin-top:-80px;">新闻</h2>
                 <ul>
-                    
                      {volist name="News" id="News"}
                     <div class="grid_12">
+                        <img src="">
                         <a href="{:url('detail?id=' . $News->id)}">{$News->title}</a>  <span>&nbsp;     [2016-08-15]</span>
-                        
+
                     </div>
                     {/volist} 
                 </ul>
