--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -5,7 +5,30 @@
 
     <div class="bg-2">
         <div class="container_12">
-            <div class="grid_12">
+            <div class="grid_6">
+                <div>
+                    <h2 class="indent-1"  style="margin-top:-80px;">热门搜索</h2>
+                    <div class="wrap box-2 border-1">
+                        <ul>
+                            <li>
+                                <a href="{:url('Productlist/detail')}" title="我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳绩" target="_parent">我校在第九届全国大学生节能减排社会实践与科技竞赛中再获佳…</a>
+                                <span>[2016-08-15]</span>
+                            </li>
+                            <li>
+                                <a href="{:url('detail')}" title="河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考察调研" target="_parent">河北省委常委、纪委书记陈超英一行到我校大学科技园沧州园区考…</a>
+                                <span>[2016-08-15]</span>
+                            </li>
+                            <li>
+                                <a href="{:url('detail')}" title="天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企业" target="_parent">天津市人大常委会副主任王宝弟一行参观考察我校大学科技园企…</a>
+                                <span>[2016-08-14]</span>
+                            </li>
+                        </ul>
+                        <br>
+                        <a href="#" class="btn">more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_6">
                 <h2 class="indent-1" style="margin-top:-80px;">新闻</h2>
                 <ul>
                      {volist name="News" id="News"}
