产品列表的点击量新闻显示

--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -32,8 +32,11 @@
                         <ul>
                         {volist name="News" id="New"}
                             <li>
-                                <a href="{:url('detail?id=' . $New->id)}" title="{$New->title}" target="_blank">{$New->title}</a>
-                                <span>{$New->create_time}</span>
+                                <a href="{:url('detail?id=' . $New->id)}" title="{$New->title}" target="_blank"><?php
+                                echo mb_substr($New->title, 0, 10, 'utf-8');
+                                ?>...                            
+                                </a>
+                                <span>[{$New->create_time}]</span>
                             </li>
                         {/volist}
                         </ul>
