改了二级页面显示文字字号

--- a/application/index/view/newsinform/detail.html
+++ b/application/index/view/newsinform/detail.html
@@ -10,7 +10,7 @@
                     <h2 style="text-align:center;padding-bottom: 40px;
 padding-top: 40px;}">{$News->title}</h2></div>
                 <div>
-                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0">{$News->content}</p>
+                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0;font-size:20px;">{$News->content}</p>
                     
                 </div>
             </div>
