--- a/application/home/view/systemset/edit.html
+++ b/application/home/view/systemset/edit.html
@@ -5,41 +5,41 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('save')}" method="post">
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label"></label>
-                    <div class="col-sm-10">
-                        <img src="/thinkphp_5.0CMS/public/img/big.jpg" class="img-thumbnail">
-                    </div>
-                </div>
+            <form class="form-horizontal" action="{:url('update')}" method="post">
                 <div class="form-group">
                     <label for="name" class="col-sm-2 control-label">公司名称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="公司名称">
+                        <input type="text" class="form-control" id="name" value="{$Systemset->name}" placeholder="公司名称">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="sex" class="col-md-2 control-label">公司名称是否显示</label>
+                    <label for="show" class="col-md-2 control-label">公司名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="sex" value="0" />
+                        <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0"} checked="checked"{/eq} />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="sex" value="1" />
+                        <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1"} checked="checked"{/eq} />
                         <label for="woman">&nbsp;否</label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">页脚名称</label>
+                    <label for="footer_name" class="col-sm-2 control-label">页脚名称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="页脚名称">
+                        <input name="footer_name" type="text" class="form-control" id="footer_name" value="{$Systemset->footer_name}" placeholder="页脚名称">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="sex" class="col-md-2 control-label">页脚名称是否显示</label>
+                    <label for="is_display" class="col-md-2 control-label">页脚名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="sex" value="0" />
+                        <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0"} checked="checked"{/eq} />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="sex" value="1" />
+                        <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value=""} checked="checked"{/eq} />
                         <label for="woman">&nbsp;否</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="file" class="col-sm-2 control-label">缩图</label>
+                    <div class="col-sm-10">
+                        <input id="file_upload" type="file" class="file" name="file"  value="" multiple="true">
                     </div>
                 </div>
                 <div class="form-group">
