--- a/application/index/view/productlist/detail.html
+++ b/application/index/view/productlist/detail.html
@@ -23,7 +23,7 @@
                     <h2 style="text-align:center;padding-bottom: 40px;
 padding-top: 40px;}">{$New->title}</h2></div>
                 <div>
-                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0">{$New->body}</p>
+                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0">{$New->content}</p>
                 </div>
                 <br />
                 <br />
