--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -9,7 +9,7 @@
                     <h2 class="indent-1">热门搜索</h2>
                     <div class="wrap box-2 border-1">
                         <ul>
-                            {volist name="News" id="New"}
+                        {volist name="News" id="New"}
                             <li>
                                 <a href="{:url('detail?id=' . $New->id)}" title="{$New->title}" target="_blank"><?php
                                 echo mb_substr($New->title, 0, 10, 'utf-8');
@@ -32,7 +32,11 @@
                 {volist name="Products" id="Product"}
                     <div class="grid_2">
                         <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
-                        <p>{$Product->title}</p>
+                        <p style="margin-top:10px">
+                            <?php
+                                echo mb_substr($Product->title, 0, 10, 'utf-8');
+                            ?>
+                        </p>
                     </div>
                     {/volist} 
                     <div style="margin-bottom:100px">
