--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -17,7 +17,7 @@
                                 </a>
                                 <span>[{$New->create_time}]</span>
                             </li>
-                        {/volist}
+                            {/volist}
                         </ul>
                         <br>
                         <a href="#" class="btn">more</a>
@@ -28,16 +28,18 @@
                 <div>
                     <h2 class="indent-1">产品列表</h2>
                 </div>
-                <div class="container_12">
-                {volist name="Products" id="Product"}
-                    <div class="grid_2">
+                <div class="wrap box-2">
+                <ul>
+                    {volist name="Products" id="Product"}
+                    <li style="float:left;margin-right: 25px;">
                         <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
                         <p>{$Product->title}</p>
-                    </div>
-                    {/volist} 
-                    <div style="margin-bottom:100px">
+                    </li>
+                    {/volist}
+                </ul>
+                </div>
+                <div style="margin-bottom:100px">
                     {$Products->render()}
-                    </div>
                 </div>
             </div>
         </div>
@@ -45,5 +47,4 @@
 </div>
 </div>
 </div>
-
 {/block}
