--- a/application/index/view/Aboutus/index.html
+++ b/application/index/view/Aboutus/index.html
@@ -14,7 +14,7 @@
     </div>
 	<div style="width:1025px;margin:80px auto 0 auto;">
 		<p style="text-indent:25px;font-size:20px;">
-			{$Article->body}
+			{$Article->content}
 		</p>
 		<br />
 	</div>
