--- a/application/home/view/Article/edit.html
+++ b/application/home/view/Article/edit.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">内容</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="内容" name="body" value="{$Article->content}" />
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="内容" name="content" value="{$Article->content}" />
                     </div>
                 </div>
                 <div class="form-group">
