把more都加上了新闻列表页的链接

--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -12,7 +12,7 @@
                            
                         </ul>
                         <br>
-                        <a href="#" class="btn">more</a>
+                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
                     </div>
                 </div>
             </div>
