--- a/application/home/view/systemset/edit.html
+++ b/application/home/view/systemset/edit.html
@@ -5,7 +5,8 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('update')}" method="post">
+            <form enctype="multipart/form-data" class="form-horizontal" action="{:url('update')}" method="post">
+                <input name="id" type="hidden" value="{$Systemset->id}" />
                 <div class="form-group">
                     <label for="name" class="col-sm-2 control-label">公司名称</label>
                     <div class="col-sm-10">
@@ -15,9 +16,9 @@
                 <div class="form-group">
                     <label for="show" class="col-md-2 control-label">公司名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0"} checked="checked"{/eq} />
+                        <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0" } checked="checked" {/eq} />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1"} checked="checked"{/eq} />
+                        <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1" } checked="checked" {/eq} />
                         <label for="woman">&nbsp;否</label>
                     </div>
                 </div>
@@ -30,16 +31,16 @@
                 <div class="form-group">
                     <label for="is_display" class="col-md-2 control-label">页脚名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0"} checked="checked"{/eq} />
+                        <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0" } checked="checked" {/eq} />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value=""} checked="checked"{/eq} />
+                        <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="" } checked="checked" {/eq} />
                         <label for="woman">&nbsp;否</label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="file" class="col-sm-2 control-label">缩图</label>
+                    <label for="name" class="col-sm-2 control-label">缩图</label>
                     <div class="col-sm-10">
-                        <input id="file_upload" type="file" class="file" name="file"  value="" multiple="true">
+                        <input id="file_upload" type="file" class="file" name="file" multiple="true">
                     </div>
                 </div>
                 <div class="form-group">
