把几个页面分别修改了一些样式，新增了两个方法

--- a/application/index/view/Aboutus/index.html
+++ b/application/index/view/Aboutus/index.html
@@ -7,8 +7,8 @@
 	<div class="slider-relative">
         <div class="slider-block">
             <div class="slider" style="position:absolute">
-                <img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt="{$Article->title}">
-                <div class="banner">{$Article->title}</div>
+                <img src="/thinkphp_5.0CMS/public/index/images/us.jpg" alt="{$Article->title}">
+                <div class="banner" style="background-color:#fff;">{$Article->title}</div>
             </div>
         </div>
     </div>
