--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -27,7 +27,10 @@
         <div class="container_12">
             <div class="grid_6">
                 <div>
-                    <h2 class="indent-1">热门搜索</h2>
+                    <div id="header">
+                        <h2>热门搜索</h2>
+                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
+                    </div>
                     <div class="wrap box-2 border-1">
                         <ul>
                         {volist name="News" id="New"}
@@ -41,13 +44,15 @@
                         {/volist}
                         </ul>
                         <br>
-                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
                     </div>
                 </div>
             </div>
             <div class="grid_6">
-                <div>
-                    <h2 class="indent-1">推荐</h2>
+                <div >
+                   <div id="header">
+                        <h2>热门搜索</h2>
+                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
+                    </div>
                 </div>
                 <div class="wrap box-2">
                 <ul>
@@ -58,15 +63,12 @@
                             <a href="{:url('detail?id=' . $TopNew->id)}"><?php
                                 echo mb_substr($TopNew->title, 0, 5, 'utf-8');
                             ?>
-                            </a>...
+                            </a>
                             {eq name="$TopNew->is_mark" value="3"}置顶{else /}推荐{/eq}
                         </p>
                     {/volist}
                 </ul>
-                </div>
-                    <div style="margin-bottom:100px">
-                    </div>
-                {$TopNews->render()}
+                </div>  
             </div>
         </div>
     </div>
