--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -1,18 +1,30 @@
-    <div class="container_12">
-        <div class="grid_12">
-           <h1><a href="index.html"><img src="/thinkphp_5.0CMS/public/index/images/logo.png" alt="BIZZ"></a></h1>
-      </div>
+<div class="container_12">
+    <div class="grid_12">
+        <h1><a href="index.html"><img src="/thinkphp_5.0CMS/public/index/images/logo.png" alt="BIZZ"></a></h1>
     </div>
-    <nav>
-        <div class="row container_12">
-            <div class="col-md-6">
-                <ul class="sf-menu">
-                    <li class="current"><a href="{:url('Index/index')}">首页</a></li>
-                    <li><a href="{:url('Newsinform/index')}">新闻通知</a></li>
-                    <li><a href="{:url('Productlist/index')}">产品列表</a></li>
-                    <li><a href="{:url('Aboutus/index')}">关于我们</a></li>
-                </ul>
-                <div class="clear"></div>
-            </div>
+</div>
+<nav>
+    <div class="row container_12">
+        <div class="col-md-6">
+            <ul class="sf-menu">
+                <li class="current"><a href="{:url('Index/index')}">首页</a></li>
+                <li
+                <?php 
+                if(session('style')==null)
+                {
+                   echo 'style="display:none;"';}
+                else{
+                   echo 'style="display:inline;"';}
+                ?>
+
+
+                ><a href="{:url('Newsinform/index')}">新闻通知</a></li>
+                <li><a href="{:url('Productlist/index')}">产品列表</a></li>
+                <li style="margin-right: 180px;"><a href="{:url('Aboutus/index')}">关于我们</a></li>
+                <li><a href="{:url('Login/index')}">登录</a></li>
+                <li><a href="{:url('Login/logout')}">退出</a></li>
+            </ul>
+            <div class="clear"></div>
         </div>
-    </nav>
+    </div>
+</nav>
