--- a/application/home/view/Article/add.html
+++ b/application/home/view/Article/add.html
@@ -4,7 +4,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('insert')}" method="post">
+            <form enctype="multipart/form-data" class="form-horizontal" action="{:url('insert')}" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">类别</label>
                     <div class="col-sm-10">
@@ -16,17 +16,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
+                    <label for="title" class="col-sm-2 control-label">名称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="名称" name="title" />
+                        <input type="text" class="form-control" id="title" placeholder="名称" name="title" />
                     </div>
                 </div>
-                <!-- <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">内容</label>
+                <div class="form-group">
+                    <label for="name" class="col-sm-2 control-label">缩图</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="内容" name="body" />
+                        <input id="file_upload" type="file" class="file" name="file" multiple="true">
                     </div>
-                </div> -->
+                </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">内容</label>
                     <div class="col-sm-10">
