更新和新增了一些前台的页面和方法

--- a/application/index/view/Aboutus/index.html
+++ b/application/index/view/Aboutus/index.html
@@ -8,7 +8,7 @@
         <div class="slider-block">
             <div class="slider" style="position:absolute">
                 <img src="/thinkphp_5.0CMS/public/index/images/us.jpg" alt="{$Article->title}">
-                <div class="banner" style="background-color:#fff;">{$Article->title}</div>
+                <h1 style="background-color:#fff;font-size:100px;">{$Article->title}</h1>
             </div>
         </div>
     </div>
