--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -51,7 +51,7 @@
                 <div >
                    <div id="header">
                         <h2>热门搜索</h2>
-                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
+                        <a href="{:url('Productlist/more')}" class="btn">MORE</a>
                     </div>
                 </div>
                 <div class="wrap box-2">
