--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="grid_6">
                 <div id="header">
-                        <h2>热门搜索</h2>
+                        <h2>新闻通知</h2>
                         <a href="{:url('Subpage/index')}" class="btn">MORE</a>
                     </div>
                 <ul>
@@ -38,7 +38,7 @@
                         <a href="{:url('detail?id=' . $Article->id)}">{$Article->title}</a> <span>&nbsp;     [2016-08-15]</span>
                     </div>
                     {/volist}
-                    <div>{$Articles->render()}</div>
+                   
                 </ul>
             </div>
         </div>
