--- a/application/index/view/productlist/more.html
+++ b/application/index/view/productlist/more.html
@@ -28,8 +28,8 @@
             </div>
             <div class="grid_6">
                 <div id="header">
-                        <h2>产品列表</h2>
-                        <a href="{:url('more')}" class="btn">MORE</a>
+                        <h2>热门搜索</h2>
+                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
                     </div>
                 <div class="container_12">
                 {volist name="Products" id="Product"}
@@ -42,7 +42,9 @@
                         </p>
                     </div>
                     {/volist} 
-                    
+                    <div style="margin-bottom:100px">
+                    {$Products->render()}
+                    </div>
                 </div>
             </div>
         </div>
