--- a/application/home/view/systemset/edit.html
+++ b/application/home/view/systemset/edit.html
@@ -10,30 +10,30 @@
                 <div class="form-group">
                     <label for="name" class="col-sm-2 control-label">公司名称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" value="{$Systemset->name}" placeholder="公司名称">
+                        <input type="text" class="form-control" id="name" value="{$Systemset->name}" name="name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="show" class="col-md-2 control-label">公司名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0" } checked="checked" {/eq} />
+                        <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0" } checked="checked" {/eq} value="0" />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1" } checked="checked" {/eq} />
+                        <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1" } checked="checked" {/eq}  value="1" />
                         <label for="woman">&nbsp;否</label>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="footer_name" class="col-sm-2 control-label">页脚名称</label>
                     <div class="col-sm-10">
-                        <input name="footer_name" type="text" class="form-control" id="footer_name" value="{$Systemset->footer_name}" placeholder="页脚名称">
+                        <input name="footer_name" type="text" class="form-control" id="footer_name" value="{$Systemset->footer_name}">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="is_display" class="col-md-2 control-label">页脚名称是否显示</label>
                     <div class="col-md-10">
-                        <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0" } checked="checked" {/eq} />
+                        <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0" } checked="checked" {/eq} value="0" />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="" } checked="checked" {/eq} />
+                        <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="1" } checked="checked" {/eq} value="1" />
                         <label for="woman">&nbsp;否</label>
                     </div>
                 </div>
