--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -31,9 +31,9 @@
                         <h2>产品列表</h2>
                         <a href="{:url('more')}" class="btn">MORE</a>
                     </div>
-                <div class="container_12">
+                <div class="container_12" style="width:500px;">
                 {volist name="Products" id="Product"}
-                    <div class="grid_2">
+                    <div class="grid_2" style="width:100px;">
                         <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
                         <p style="margin-top:10px">
                             <?php
