--- a/application/index/view/productlist/more.html
+++ b/application/index/view/productlist/more.html
@@ -4,36 +4,14 @@
 <div id="content">
     <div class="bg-2">
         <div class="container_12">
-            <div class="grid_6">
-                <div>
-                    <div id="header">
-                        <h2>热门搜索</h2>
-                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
-                    </div>
-                    <div class="wrap box-2 border-1">
-                        <ul>
-                        {volist name="News" id="New"}
-                            <li>
-                                <a href="{:url('detail?id=' . $New->id)}" title="{$New->title}" target="_blank"><?php
-                                echo mb_substr($New->title, 0, 10, 'utf-8');
-                                ?>...                            
-                                </a>
-                                <span>[{$New->create_time}]</span>
-                            </li>
-                        {/volist}
-                        </ul>
-                        <br>
-                    </div>
-                </div>
-            </div>
-            <div class="grid_6">
+            <div class="grid_12">
                 <div id="header">
-                        <h2>热门搜索</h2>
-                        <a href="{:url('Subpage/index')}" class="btn">MORE</a>
+                        <h2>产品列表</h2>
+                       
                     </div>
-                <div class="container_12">
+                <div class="container_12" style="width:500px;">
                 {volist name="Products" id="Product"}
-                    <div class="grid_2">
+                    <div class="grid_2" style="width:100px;">
                         <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
                         <p style="margin-top:10px">
                             <?php
@@ -42,9 +20,7 @@
                         </p>
                     </div>
                     {/volist} 
-                    <div style="margin-bottom:100px">
                     {$Products->render()}
-                    </div>
                 </div>
             </div>
         </div>
