更改了一些界面的显示问题

--- a/application/index/view/Subpage/index.html
+++ b/application/index/view/Subpage/index.html
@@ -9,7 +9,8 @@
                     {volist name="Articles" id="Article"}
                     <div class="grid_12">
                         <img src="">
-                        <a href="{:url('detail?id=' . $Article->id)}">{$Article->title}</a> <span>&nbsp;     [2016-08-15]</span>
+                        <a href="{:url('detail?id=' . $Article->id)}">{$Article->title}</a> 
+                        <span>[ {$Article->create_time} ]</span>
                     </div>
                     {/volist}
                     <div style="margin-left:-100px;">{$Articles->render()}</div>
