修改前台图片的绑定

--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -7,18 +7,11 @@
         <div class="slider-block">
             <div class="slider">
                 <ul class="items">
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-1.jpg" alt="">
+                {volist name="SliderShows" id="SliderShow"}
+                    <li><img src="{$SliderShow->getArticleContent($SliderShow->id)->url}" alt="{$SliderShow->title}">
                         <div class="banner">Our Customers are Our Priority</div>
                     </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-2.jpg" alt="">
-                        <div class="banner">Creative Problem-Solving</div>
-                    </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-3.jpg" alt="">
-                        <div class="banner">Imagination is Our Power</div>
-                    </li>
-                    <li><img src="/thinkphp_5.0CMS/public/index/images/slider-4.jpg" alt="">
-                        <div class="banner">The World of Opportunities</div>
-                    </li>
+                {/volist}
                 </ul>
             </div>
         </div>
@@ -58,7 +51,7 @@
                 <ul>
                     {volist name="TopNews" id="TopNew"}
                     <li style="float:left;margin-right: 25px;">
-                        <a href="{:url('detail?id=' . $TopNew->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$TopNew->title}" width="100px"></a>
+                        <a href="{:url('detail?id=' . $TopNew->id)}"><img src="{$TopNew->getArticleContent($TopNew->id)->url}" alt="{$TopNew->title}" width="100px"></a>
                         <p style="margin-top:10px">
                             <a href="{:url('detail?id=' . $TopNew->id)}"><?php
                                 echo mb_substr($TopNew->title, 0, 5, 'utf-8');
