--- a/application/index/view/productlist/index.html
+++ b/application/index/view/productlist/index.html
@@ -34,7 +34,7 @@
                 <div class="container_12" style="width:500px;">
                 {volist name="Products" id="Product"}
                     <div class="grid_2" style="width:100px;">
-                        <a href="{:url('detail?id=' . $Product->id)}"><img src="/thinkphp_5.0CMS/public/img/ben.png" alt="{$Product->title}" width="100px"></a>
+                        <a href="{:url('detail?id=' . $Product->id)}"><img src="{$Product->getArticleContent($Product->id)->url}" alt="{$Product->title}" width="100px"></a>
                         <p style="margin-top:10px">
                             <?php
                                 echo mb_substr($Product->title, 0, 10, 'utf-8');
