前台细节改动

--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -8,8 +8,8 @@
             <div class="slider">
                 <ul class="items">
                 {volist name="SliderShows" id="SliderShow"}
-                    <li><img src="{$SliderShow->getArticleContent($SliderShow->id)->url}" alt="{$SliderShow->title}">
-                        <div class="banner">Our Customers are Our Priority</div>
+                    <li><img src="\thinkphp_5.0CMS\public\images\20160828\15c73b7416e775d50a79162a83aefc05.jpg" alt="{$SliderShow->title}">
+                        <div class="banner">{$SliderShow->title}</div>
                     </li>
                 {/volist}
                 </ul>
