--- a/application/index/view/productlist/detail.html
+++ b/application/index/view/productlist/detail.html
@@ -10,9 +10,9 @@
                 <div style="text-align:center;"> <img src="/thinkphp_5.0CMS/public/img/ben.png" alt="产品" title="图片"></div>
                 <div>
                     <h2 style="text-align:center;padding-bottom: 40px;
-padding-top: 40px;}">{$New->title}</h2></div>
+padding-top: 40px;}">{$News->title}</h2></div>
                 <div>
-                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0">{$New->content}</p>
+                    <p style="text-indent: 28pt; margin: 0cm 0cm 0pt; mso-char-indent-count: 2.0">{$News->content}</p>
                 </div>
                 <br />
                 <br />
