--- a/application/index/view/head.html
+++ b/application/index/view/head.html
@@ -5,6 +5,7 @@
      <link rel="stylesheet" href="/thinkphp_5.0CMS/public/index/css/style.css">
      <link rel="stylesheet" href="/thinkphp_5.0CMS/public/index/css/slider.css">
      <link rel="icon" href="/thinkphp_5.0CMS/public/index/images/favicon.ico">
+     <link rel="stylesheet" href="/thinkphp_5.0CMS/public/css/slider.css">
      <script src="/thinkphp_5.0CMS/public/index/js/jquery.js"></script>
      <script src="/thinkphp_5.0CMS/public/index/js/jquery.easing.1.3.js"></script>
      <script src="/thinkphp_5.0CMS/public/index/js/jquery-migrate-1.1.1.js"></script>
