--- a/application/home/view/systemset/add.html
+++ b/application/home/view/systemset/add.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="name" class="col-sm-2 control-label">缩图</label>
+                    <label for="name" class="col-sm-2 control-label">上传logo</label>
                     <div class="col-sm-10">
                         <input id="file_upload" type="file" class="file" name="file" multiple="true">
                     </div>
